# -NSS3rd-EverythingFake

./: README.md  settings.gradle
WP/: 66.py  Data  Data.i64
WP/Hook/: DumpSO.js
WP/app-release.apk.cache/: code-version  names-map
WP/app-release.apk.cache/metadata/02/: 00002302.jadxmd
WP/app-release.apk.cache/metadata/03/: 00002303.jadxmd
WP/app-release.apk.cache/metadata/0c/: 0000230c.jadxmd
WP/app-release.apk.cache/sources/03/: 00002303.java
WP/app-release.apk.cache/sources/0c/: 0000230c.java
app/: build.gradle
app-debug.apk.cache/: code-version  names-map
app-debug.apk.cache/metadata/3c/: 00001c3c.jadxmd
app-debug.apk.cache/metadata/3d/: 00001c3d.jadxmd
app-debug.apk.cache/metadata/46/: 00001c46.jadxmd
app-debug.apk.cache/sources/3c/: 00001c3c.java
app-debug.apk.cache/sources/3d/: 00001c3d.java
app-debug.apk.cache/sources/46/: 00001c46.java
app-release.apk.cache/: code-version  names-map
app-release.apk.cache/metadata/01/: 00002301.jadxmd
app-release.apk.cache/metadata/02/: 00002302.jadxmd
app-release.apk.cache/metadata/0c/: 0000230c.jadxmd
app-release.apk.cache/sources/01/: 00002301.java
app-release.apk.cache/sources/02/: 00002302.java
app-release.apk.cache/sources/0c/: 0000230c.java
app/release/: output-metadata.json
app/src/androidTest/java/com/swdd/ezezez/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Data
app/src/main/cpp/: CMakeLists.txt  MyLoader.cpp  MyLoader.h  OtherSo.cpp  fake.cpp  log.h  native-lib.cpp  obfusheader.h
app/src/main/java/com/swdd/ezezez/: MainActivity.java  PermissionActivity.java  Stub.java
app/src/main/res/drawable/: edittext_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/swdd/ezezez/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
